--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 # Normalized utility matrices are fast to compute, around 10 seconds. No need to upload.
 NormalizedUtilityMatrixCSC.npz
 NormalizedUtilityMatrixCSR.npz
+*npy
